<resources>
    <string name="app_name">TaskManagement</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="manager_login">Manager Login</string>
    <string name="developers_login">Developers Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="userName">User Name:</string>
    <string name="enter_username_hint">Enter UserName</string>
    <string name="enter_pwd_hint">Enter Password</string>
    <string name="signup_title">Sign Up</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="admin_home">Admin Home</string>
    <string name="add_manager">Add Manager</string>
    <string name="add_developer">Add Developer</string>
    <string name="add_project">Add Project</string>
    <string name="view_project">View Projects</string>
    <string name="admin_reg">Admin Registration</string>
    <string name="name">Name:</string>
    <string name="phoneno">Phone No:</string>
    <string name="emailid">EmailId:</string>
    <string name="password">Password:</string>
    <string name="save">Save</string>
    <string name="manger_reg">Manager Registration</string>
    <string name="dev_reg">Developer Registration</string>
    <string name="title_activity_developers_home">DevelopersHome</string>
    <string name="title_activity_managers_home">ManagersHome</string>
    <string name="projects">Projects</string>
    <string name="signout">SignOut</string>
    <string name="project">Project:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="cancel">Cancel</string>
    <string name="project_name">Project Name:</string>
    <string name="tasks">Tasks:</string>
    <string name="add_task">Add Task</string>
    <string name="invalid_emailId">InValid EmailId</string>
    <string name="invalid_pwd">Invalid Password</string>
    <string name="invalid_usrname_pwd">Invalid Username and Password</string>
    <string name="invalid_name">Invalid UserName</string>
    <string name="succesfully_reg">Succesfully Registration</string>
    <string name="pro_mngr">Project Manager:</string>
    <string name="enter_end_time">Enter end Time</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="endtime_starttime_mismatch">End Time should be grater than StartTime</string>
    <string name="no_projectmanager_available">No ProjectManager available</string>
    <string name="invalid_project_name">Invalid ProjectName</string>
    <string name="pro_added_succesfully">Project Added Succesfully</string>
    <string name="no_task_available">No Tasks Available</string>
    <string name="invalid_task_name">Invalid Task Name</string>
</resources>
