<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.elixir.taskmanagement.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/admin_login"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/username_edttxt"
        android:layout_below="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:singleLine="true"
        android:hint="@string/enter_username_hint" />


    <EditText
        android:id="@+id/pwd_edttxt"
        android:layout_below="@+id/username_edttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:singleLine="true"
        android:hint="@string/enter_pwd_hint" />

    <Button
        android:id="@+id/signinbtn"
        android:layout_below="@+id/pwd_edttxt"
        android:text="@string/login_title"
        android:layout_toLeftOf="@+id/dummy"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/pwd_edttxt"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_below="@+id/pwd_edttxt"
        android:text="@string/signup_title"
        android:layout_toRightOf="@+id/dummy"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
