<?xml version="1.0" encoding="utf-8"?><!-- A CardView that contains a TextView -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">


        <LinearLayout
            android:id="@+id/pro_lay"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admin_reg_txtview">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_height="wrap_content"
                android:text="@string/project_name" />

            <TextView
                android:id="@+id/pro_name_txtview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_lay"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pro_lay">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="wrap_content"
                android:text="@string/start_time" />

            <TextView
                android:id="@+id/start_txtview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_lay"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_lay">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_height="wrap_content"
                android:text="@string/end_time" />

            <TextView
                android:id="@+id/end_txtview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/end_lay"
            android:text="@string/tasks" />

        <Button
            android:id="@+id/add_tasks_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/task_title"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:text="@string/add_task" />

        <TextView
            android:id="@+id/tasks_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_title" />

    </RelativeLayout>
</android.support.v7.widget.CardView>