<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/pro_lay"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/admin_reg_txtview">

        <TextView
            android:id="@+id/pro_name_txtview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:text="@string/project" />

        <EditText
            android:id="@+id/project_edittxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_lay"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/pro_lay">

        <TextView
            android:id="@+id/starttime_txtview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:text="@string/start_time" />

        <EditText
            android:id="@+id/starttime_edittxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_lay"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/start_lay">

        <TextView
            android:id="@+id/endtime_txtview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:text="@string/end_time" />

        <EditText
            android:id="@+id/endtime_edittxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mngr_lay"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/end_lay">

        <TextView
            android:id="@+id/mngr_txtview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:text="@string/pro_mngr" />

        <Spinner
            android:id="@+id/mngr_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>